Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124666

Performance regression after "Abstract QWidget focus chain management"

    XMLWordPrintable

Details

    • Linux/X11
    • 913442a75 (dev)

    Description

      There seem to be a huge performance regression with the current latest code in dev (e7362764d4931f255d2377462df8ac7a0d4e7c84).
      I built both my project and Qt in Debug.
      It's fixed if I revert the following commit:
      58d5d4b7c2faaeaa2c2ccdabb3da6d37f9db880a Abstract QWidget focus chain management
      (I also had to revert 079578eadd1ffe593bf8afbfe7c401b7e3176c63 first to avoid conflicts).

      A setting dialog I use with multiple stacked widgets takes 10 seconds to open when it before took 1 second or less.
      So it seems this change introduces a performance regression, might be worth reverting unless it can be fixed before the next release.

      CC axelspoerl

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            axelspoerl Axel Spoerl
            jonaski Jonas Kvinge
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes